# claude-code-proxy

./: .dockerignore  .env.example  .envrc  .gitignore  .gitmodules  2025-11-18_REMAINING_TASKS.md  ANALYTICS_ENHANCEMENT_SUMMARY.md  API_KEY_EXPLANATION.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CLEAN_REPO.md  CLIPproxy-cheatsheet.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  CROSSTALK.md  CROSSTALK_USAGE.md  DIAGNOSTIC_REPORT.md  DOCS.md  Dockerfile  ENV_FIX.md  EXECUTIVE_SUMMARY_METRICS_ENHANCEMENT.md  FINAL_FIX_SUMMARY.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_SOURCE_MODELS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_SPEC.md  PHASE3_COMPLETE.md  PHASE3_SPEC.md  PHASE4_COMPLETE.md  PRD_ENHANCED_WEB_UX.md  PRE_PUSH_AUDIT.md  PRODUCTION_READINESS.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  REASONING_GUIDE.md  (+79 more)
.checkpoints/: implementation-plan.md
SNAKESKIN/: GIMP.md  anthropic-orchestration-tool-calls-gemini-routing.md  anthropic-tool-call-audit-nov2025-feb2026.md  dynamic-model-discovery.md  issue-18-tool-call-continuation.md  multi-provider-architecture.md  shame.md
audit-reports/: hardcoded-model-names-audit.md  saas-transformation-report.md
booger/: 00-TABLE-OF-CONTENTS.md  EXECUTIVE-SUMMARY.txt  FEATURES.md  FILE-CHANGES.md  INDEX.md  MASTER-INDEX.html  README.md  SCRATCH-4-FEATURE-INVENTORY.md  file-diff-inventory.txt  file-inventory.txt  scratch-1.md  scratch-2.md  scratch-3.md
cli/: README.md  claude_proxy.py  setup.py
compression/: CHANGELOG.md  MIGRATION-PLAN.md  ROADMAP.md
config/: custom_router.example.py  env.example  proxy_chain.bak.2026-04-24-111912  proxy_chain.json
data/: benchmarks.json  model_limits.csv  model_limits.json  model_usage.json  openrouter_models.csv  openrouter_models.json  users.db
deep-research/: SKILL.md
docs/: API.md  CROSSTALK_V2_PROPOSAL.md  EXAMPLES.md  MODEL_SCAN_INTEGRATION.md  PRODUCTION_FEATURES.md  STATUS_BARS.md  TERMINAL_OUTPUT.md  TROUBLESHOOTING_401.md  adversarial_validation.md  alias-and-command-design.md  allocator-activation.md  configuration.md  crosstalk.md  feature-parity.md  headroom-acceleration.md  index.md  (+1 more)
(+653 files in other folders)
